--- a/.github/workflows/scs.yml
+++ b/.github/workflows/scs.yml
@@ -22,4 +22,6 @@ jobs:
         uses: security-code-scan/security-code-scan-results-action@v1.2
         
       - name: Upload sarif
-        uses: github/codeql-action/upload-sarif@v1
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif-file: ./FullDotNetWebApp/analysis.sarif
