--- a/.github/workflows/boost.yml
+++ b/.github/workflows/boost.yml
@@ -13,7 +13,7 @@ jobs:
         uses: boostsecurityio/boostsec-scanner-github@v4
         env:
           SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }}
-          SEMGREP_RULES: p/csharp
+#           SEMGREP_RULES: p/csharp
         with:
           api_token: ${{ secrets.BOOST_API_TOKEN }}
           registry_module: boostsecurityio/semgrep
