--- a/.github/workflows/scs.yml
+++ b/.github/workflows/scs.yml
@@ -1,17 +1,17 @@
-name: SCS
 on:
+  push:
   workflow_dispatch:
 
 jobs:
   SCS:
     runs-on: windows-latest
     steps:     
-      - uses: actions/checkout@v3.5.2
-      - uses: nuget/setup-nuget@v1.2.0
-      - uses: microsoft/setup-msbuild@v1.3.1
+      - uses: actions/checkout@v2
+      - uses: nuget/setup-nuget@v1.0.5
+      - uses: microsoft/setup-msbuild@v1.0.2
 
       - name: Set up projects
-        uses: security-code-scan/security-code-scan-add-action@v1.2
+        uses: security-code-scan/security-code-scan-add-action@main
 
       - name: Build
         run: |
@@ -19,7 +19,7 @@ jobs:
           msbuild
         
       - name: Convert sarif for uploading to GitHub
-        uses: security-code-scan/security-code-scan-results-action@v1.2
+        uses: security-code-scan/security-code-scan-results-action@main
         
       - name: Upload sarif
         uses: github/codeql-action/upload-sarif@v1
