--- a/.github/workflows/boost.yml
+++ b/.github/workflows/boost.yml
@@ -13,8 +13,7 @@ jobs:
       - name: Run Native Scanner
         uses: boostsecurityio/boostsec-scanner-github@v4
         env:
-          SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }}
-          SEMGREP_RULES: p/csharp
+          SEMGREP_RULES: https://gitlab.com/gitlab-org/security-products/sast-rules/-/raw/main/dist/security_code_scan.yml
         with:
           api_token: ${{ secrets.BOOST_API_TOKEN }}
           registry_module: boostsecurityio/semgrep
